==> SAR-mango/SinESC/Old/Dev/Original ST Software/STEVAL_ESC001V1.c <==
#include "stm32f3xx_hal.h"
#include "stm32f3xx.h"
#include "mc_type.h"
#include "stdbool.h"
#include "parameters_conversion.h"
#include "mc_config.h"
#include "STEVAL_ESC001V1.h"
#include "main.h"
#define FILTER_DEEP           4                        /*!<  Command PWM Low pass filter variable */
#define PWM_ESC                                        /*!<  If undef enables the WB tool (ESC function disables) */
#define STOP_DURATION_SEC     2                        /*!<  Time (sec) for restart after fault */
#define TURNOFF_TIME_SEC      2                        /*!<  Time (sec) for disarming */
#define ARMING_TIME_SEC       2
#define COUNT_MAX_SEC   1
#define COUNT_MAX (COUNT_MAX_SEC * SYS_TICK_FREQUENCY/4)
#define USER_TIMEBASE_FREQUENCY_HZ        400
#define USER_TIMEBASE_OCCURENCE_TICKS  (SYS_TICK_FREQUENCY/USER_TIMEBASE_FREQUENCY_HZ)-1u  /*  CALC_TIME = USER_TIMEBASE_OCCURENCE_TICKS * 500usec (of systick) */
#define RESTART_DURATION  (STOP_DURATION_SEC * SYS_TICK_FREQUENCY/4)
#define TURNOFF_TIME_MAX_SEC (TURNOFF_TIME_SEC * SYS_TICK_FREQUENCY/4)
#define ARMING_TIME_DIGIT (ARMING_TIME_SEC * SYS_TICK_FREQUENCY/4)
#define SM_BEEP_1           0x01
#define SM_BEEP_2           0x02
#define SM_BEEP_3           0x03
#define SM_BEEP_4           0x04
#define USER_TIMEBASE_FREQUENCY_HZ_BEEP   400
#define USER_TIMEBASE_OCCURENCE_TICKS_BEEP  (SYS_TICK_FREQUENCY/USER_TIMEBASE_FREQUENCY_HZ_BEEP)-1u

void ESCboot(void)
{        
  
  Init_PWM_Channel();
  
    /* Enable the CC1 Interrupt Request */
  if (HAL_TIM_IC_Start_IT(&htim2, TIM_CHANNEL_1) != HAL_OK)
  {
    /* Starting Error */
   Error_Handler();
  }

  /*##-5- Start the Input Capture in interrupt mode ##########################*/
  if (HAL_TIM_IC_Start_IT(&htim2, TIM_CHANNEL_2) != HAL_OK)
  {
    /* Starting Error */
    Error_Handler();
  }
  
  /***************************** for deug only *******************/
  GPIO_InitTypeDef GPIO_InitStruct;  
  GPIO_InitStruct.Pin = GPIO_PIN_4;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull = GPIO_PULLDOWN;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
  HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
  
  Ton_max = (uint32_t)(float)(Ton_max_us * digit_to_usec);
  Ton_min = (uint32_t)(float)(Ton_min_us * digit_to_usec);
  Threshold_start_digit = (uint32_t)(float)(Threshold_start_us * digit_to_usec);
  Threshold_stop_digit  = (uint32_t)(float)(Threshold_stop_us * digit_to_usec);
  delta_Ton_max = (uint32_t)(Ton_max - Ton_min);   

    while(counter_delay <2000000)
    { 
    counter_delay ++;
    if(MC_GetSTMStateMotor1() == FAULT_OVER)
     {
      while(!MC_AcknowledgeFaultMotor1());
     }
    }
#ifdef TELEMETRY_LOG
    Telemetry_init_message();
#endif
}

void TIM2_IRQHandler(void)
{
  /* USER CODE BEGIN TIM2_IRQn 0 */

  /* USER CODE END TIM2_IRQn 0 */
  HAL_TIM_IRQHandler(&htim2);
  /* USER CODE BEGIN TIM2_IRQn 1 */

  /* USER CODE END TIM2_IRQn 1 */
}

void pwm_start()
{ 
 if(UI_IdleTimeHasElapsed())
 { 
//  HAL_GPIO_TogglePin(GPIOA, GPIO_PIN_4);   
  /* User defined code */
  switch (User_State)
  { 
   case SM_ARMING:
    {
      Ton_value_previous = 0;
      Ton_value_max_arming = (uint32_t) (Ton_min + (float)((Ton_max - Ton_min)>>1));
      
      if((Ton_value > (Ton_min + Threshold_start_digit) && Ton_value < Ton_value_max_arming))
      {
        ARMING_counter++;
        if(ARMING_counter > ARMING_TIME_DIGIT && PWM_available == true)    
         { 
           User_State = SM_ARMED;   
           ARMING_counter  = 0;
           PWM_TURNOFF_counter = 0;                   
           PWM_fail_counter = 0;
           PWM_fail_counter_prev = 0;   
           buffer_completed = false;
         }
         PWM_available = false;
      }
      else 
       {
         PWM_available = false;
         User_State = SM_ARMING;          
         ARMING_counter  = 0;
       }
 /****************************** INPUT SIGNAL LOSS ***************BEGIN********/
#ifdef PWM_ESC    
   if(PWM_fail_counter == PWM_fail_counter_prev)
       {
         PWM_TURNOFF_counter++;
 
         if(PWM_TURNOFF_counter > PWM_TURNOFF_MAX)
         {
          ESC_Beep_loop(1);
          Ton_value_previous = 0;
         }
       }
       else 
       {
         PWM_TURNOFF_counter = 0;
         ESC_reset_PWM_CH();
       }      
    PWM_fail_counter_prev = PWM_fail_counter; 
#endif
 /****************************** INPUT SIGNAL LOSS ****************END********/        
      }
    break;  
   case SM_ARMED:
    {
          /* Next state */
          /* This command sets what will be the first speed ramp after the 
          MCI_StartMotor command. It requires as first parameter the oMCI[0], as 
          second parameter the target mechanical speed in thenth of Hz and as
          third parameter the speed ramp duration in milliseconds. */

          MC_ProgramSpeedRampMotor1(speed_min_valueRPM/6, 0);
          /* This is a user command used to start the motor. The speed ramp shall be
          pre programmed before the command.*/

          cmd_status = MC_StartMotor1();          
          
          /* It verifies if the command  "MCI_StartMotor" is successfully executed 
          otherwise it tries to restart the procedure */
          if(cmd_status==false)    
           {
            User_State = SM_ARMING;                       // Command NOT executed
           }
          else User_State = SM_POSITIVE_RUN;              // Command executed
 
          UserCnt = 0;
    }
    break;  
   case SM_POSITIVE_RUN:
    {  
       if(PWM_fail_counter == PWM_fail_counter_prev)
       {
         PWM_TURNOFF_counter++;
 
         if(PWM_TURNOFF_counter > PWM_TURNOFF_MAX)
         {
          User_State = SM_STOP; 
          Ton_value_previous = 0;
          ESC_Fault_Occured = ESC_NOSIGNAL;
         }
       }
       else 
       {
         PWM_TURNOFF_counter = 0;
       }

       if(Ton_value > 0 && Ton_value < (Ton_min - Threshold_stop_digit))
       {
//         HAL_GPIO_WritePin(GPIOA, GPIO_PIN_4,GPIO_PIN_SET); 
         TURNOFF_TIME_counter ++;
         if(TURNOFF_TIME_counter > TURNOFF_TIME_MAX_SEC)
         {
          User_State = SM_STOP; 
          Ton_value_previous = 0;          
          TURNOFF_TIME_counter = 0;
          ESC_Fault_Occured = ESC_PWM_BELOW_MIN;
//          HAL_GPIO_WritePin(GPIOA, GPIO_PIN_4,GPIO_PIN_RESET);   
         }         
       }
       else 
       {
         TURNOFF_TIME_counter = 0;
       }
                        
       if(Ton_value<= Ton_max && Ton_value > Ton_min)
       {
          new_speed = (uint32_t)((float) speed_min_valueRPM + (float)(speed_max_valueRPM - speed_min_valueRPM)*((float)(Ton_value-Ton_min) / (float)delta_Ton_max));   
       }
       else if(Ton_value>Ton_max)
       {
         new_speed = speed_max_valueRPM;
       }
                  
       if(new_speed <  speed_min_valueRPM)
        new_speed =  speed_min_valueRPM;
       if(new_speed > speed_max_valueRPM)
        new_speed = speed_max_valueRPM;        
  
#ifdef TELEMETRY_LOG       
    new_speed_stored = new_speed;       /* for Telemetry */
#endif    
   
    if(MC_GetSTMStateMotor1()== RUN)       
     {
       MC_ProgramSpeedRampMotor1(new_speed/6, 0); 
     }
     
       PWM_fail_counter_prev = PWM_fail_counter;
    }
    break;
   case SM_STOP:
    {
       /* This is a user command to stop the motor */
       MC_StopMotor1();
        
       /* After the time "RESTART_DURATION" the motor will be restarted */
       if (UserCnt >= RESTART_DURATION)
          {
            /* Next state */ 
            User_State = SM_ARMING;   
            UserCnt = 0;   
            Ton_value  = 0;
            ARMING_counter = 0;
            Ton_value_previous = 0;
            new_speed_stored = 0;           
            buffer_completed = false;            
          }
          else
          {
            UserCnt++;
          }
    }
    break;  
  }
  UI_SetIdleTime(USER_TIMEBASE_OCCURENCE_TICKS);
 }
}

void PWM_FC_control()
{
#ifdef PWM_ESC      
 if(return_cmd != true)
 {
  return_cmd = ESC_phase_check();
 }
 else
 {   
   pwm_start();
 }
 
 if(MC_GetSTMStateMotor1() == FAULT_OVER)
 {
  while(!MC_AcknowledgeFaultMotor1());
  User_State = SM_STOP;   
  ARMING_counter  = 0;
 }
#endif
 
#ifdef TELEMETRY_LOG
       Telemetry_DataLog();
#endif 
}
