==> SAR-mango/SinESC/Dev/Original ST Software/STSW-ESC001V1/ESC_STM32_FOC_FW/Web/Project/STEVAL_ESC001V1.c <==
#include "MC.h"
#include "STEVAL_ESC001V1.h"
#include "Parameters conversion.h"
#include "Timebase.h"
#define SM_ARMING       0x00
#define SM_ARMED        0x01
#define SM_POSITIVE_RUN 0x02
#define SM_STOP         0x03
#define COUNT_MAX_SEC  1
#define STOP_DURATION_SEC 2
#define COUNT_MAX (COUNT_MAX_SEC * USER_TIMEBASE_FREQUENCY_HZ)
#define STOP_DURATION  (STOP_DURATION_SEC * USER_TIMEBASE_FREQUENCY_HZ)
#define USER_TIMEBASE_FREQUENCY_HZ        400
#define USER_TIMEBASE_OCCURENCE_TICKS  (SYS_TICK_FREQUENCY/USER_TIMEBASE_FREQUENCY_HZ)-1u
#define FILTER_DEEP 4                                  /*!<  PWM Low pass filter variable */
#define PWM_ESC                                        /*!<  If undef enables the WB tool (ESC function disables) */

void ESCboot(void)
{
   /* Get reference of MCI*/ 
   oMCI = GetMCI(M1);
   
   /* Enable GPIOA-GPIOI clock */
  RCC_AHBPeriphClockCmd(RCC_AHBPeriph_ADC34, (FunctionalState)ENABLE); 
  
  /* Init ADC peripherals and related IRQ handler*/
  ADC_DeInit(ADC3);
  
  /* Common init */
  ADC_CommonStructInit(&ADC_CommonInitStructure);
  ADC_CommonInitStructure.ADC_Mode = ADC_Mode_Independent;
  ADC_CommonInitStructure.ADC_Clock = 65536;
  ADC_CommonInitStructure.ADC_DMAAccessMode = ADC_DMAAccessMode_Disabled;
  ADC_CommonInitStructure.ADC_DMAMode = ADC_DMAMode_OneShot;
  ADC_CommonInitStructure.ADC_TwoSamplingDelay= 0u;
  ADC_CommonInit(ADC3, &ADC_CommonInitStructure);
  
  ADC_VoltageRegulatorCmd(ADC3, (FunctionalState)ENABLE);
  
  /* Wait for Regulator Startup time, once for both */
  {
    uint16_t waittime = 0u;
    for(waittime=0u;waittime<65000u;waittime++)
    {
	waittime=waittime;
    }
  }    
  
  ADC_SelectCalibrationMode(ADC3,ADC_CalibrationMode_Single);    
  ADC_StartCalibration(ADC3);
  while (ADC_GetCalibrationStatus(ADC3)== SET )
  {
  }
  /* Configure the ADC3_for reg conversions */
  ADC_StructInit(&ADC_InitStructure);
  ADC_InitStructure.ADC_ContinuousConvMode = ADC_ContinuousConvMode_Disable;
  ADC_InitStructure.ADC_Resolution = ADC_Resolution_12b; 
  ADC_InitStructure.ADC_ExternalTrigConvEvent = ADC_ExternalTrigConvEvent_0;
  ADC_InitStructure.ADC_ExternalTrigEventEdge = ADC_ExternalTrigEventEdge_None;    
  ADC_InitStructure.ADC_DataAlign = ADC_DataAlign_Left;
  ADC_InitStructure.ADC_OverrunMode = ADC_OverrunMode_Disable;
  ADC_InitStructure.ADC_AutoInjMode = ADC_AutoInjec_Disable;
  ADC_InitStructure.ADC_NbrOfRegChannel = 1u;
  
  ADC_Init(ADC3, &ADC_InitStructure);
    
   /* Enable ADC3 */
  ADC_Cmd(ADC3, (FunctionalState)ENABLE);
  
  /* Enable the PWM function for input signal */
  PWM_FC_Init();
  
  delta_Ton_max = Ton_max - Ton_min; 
  
}

void TIM2_IRQHandler(void)
{
  uint32_t tmpccer = 0;
  
  PWM_fail_counter++;
  if(PWM_fail_counter == 0) 
     PWM_fail_counter = 1;
       
  if(TIM_GetITStatus(TIM2, TIM_IT_CC1) == SET) 
  {
    /* Clear TIM1 Capture compare interrupt pending bit */
    TIM_ClearITPendingBit(TIM2, TIM_IT_CC1);
   
    if(CaptureNumber == 0)
    {
      /* Detect the rising edge and set the next for falling */
      tmpccer &= (uint32_t)~(TIM_CCER_CC1P | TIM_CCER_CC1NP);
      tmpccer |= (uint32_t)(TIM_ICPolarity_Falling | (uint32_t)TIM_CCER_CC1E); 
      TIM2->CCER =  tmpccer;    
      IC1ReadValue1 = TIM_GetCapture1(TIM2);      
      CaptureNumber = 1;
    }
    else
    { 
      /* Detect the falling edge and set the next for rising */
      tmpccer &= (uint32_t)~(TIM_CCER_CC1P | TIM_CCER_CC1NP);
      tmpccer |= (uint32_t)(TIM_ICPolarity_Rising | (uint32_t)TIM_CCER_CC1E); 
      TIM2->CCER =  tmpccer; 
      IC1ReadValue2 = TIM_GetCapture1(TIM2);       
      CaptureNumber = 0;
    }
    
    if(CaptureNumber == 0)
    {
      /* Capture computation */
      if (IC1ReadValue2 > IC1ReadValue1)
      {
        Capture = (IC1ReadValue2 - IC1ReadValue1); 
        
        Ton_value = TIMCapture_filter(Capture);
      }
  }
 }
}

void pwm_start()
{ 
 if(TB_UserTimebaseHasElapsed())
 { 
  /* User defined code */
  switch (User_State)
  {
   case SM_ARMING:
    {
      Ton_value_previous = 0;
      if((Ton_value > Ton_min) && (Ton_value < (Ton_max +5000))) 
      {
        ARMING_counter++;
        if(ARMING_counter > ARMING_TIME)    
         {
           User_State = SM_ARMED;   
           ARMING_counter  = 0;
           PWM_TURNOFF_counter = 0;                   
           PWM_fail_counter = 0;
           PWM_fail_counter_prev = 0;   
           buffer_completed = FALSE;
         }
      }
      else 
       {
         User_State = SM_ARMING;          
         ARMING_counter  = 0;
       }
      }
    break;  
   case SM_ARMED:
    {
          /* Next state */
          /* This command sets what will be the first speed ramp after the 
          MCI_StartMotor command. It requires as first parameter the oMCI[0], as 
          second parameter the target mechanical speed in thenth of Hz and as
          third parameter the speed ramp duration in milliseconds. */
          MCI_ExecSpeedRamp(oMCI, speed_min_valueRPM/6, 0);
          
          /* This is a user command used to start the motor. The speed ramp shall be
          pre programmed before the command.*/
          cmd_status = MCI_StartMotor(oMCI);
          
          /* It verifies if the command  "MCI_StartMotor" is successfully executed 
          otherwise it tries to restart the procedure */
          if(cmd_status==FALSE)    
           {
            User_State = SM_ARMING;                       // Command NOT executed
           }
          else User_State = SM_POSITIVE_RUN;              // Command executed
 
          UserCnt = 0;
    }
    break;  
   case SM_POSITIVE_RUN:
    {  
       if(PWM_fail_counter == PWM_fail_counter_prev)
       {
         PWM_TURNOFF_counter++;
 
         if(PWM_TURNOFF_counter > PWM_TURNOFF_MAX)
         {
          User_State = SM_STOP; 
          Ton_value_previous = 0;
         }
       }
       else 
       {
         PWM_TURNOFF_counter = 0;

       }

       if(Ton_value > 0 && Ton_value < Ton_min)
       {
         TURNOFF_TIME_counter ++;
         if(TURNOFF_TIME_counter > TURNOFF_TIME_MAX)
         {
          User_State = SM_STOP; 
          Ton_value_previous = 0;          
          TURNOFF_TIME_counter = 0;
         }         
       }
       else 
       {
         TURNOFF_TIME_counter = 0;
       }
                        
       if(Ton_value<=Ton_max && Ton_value > Ton_min)
       {
         new_speed = (Ton_value-Ton_min) * speed_max_valueRPM / delta_Ton_max;  
       }
                 
       if(new_speed < speed_min_valueRPM)
        new_speed = speed_min_valueRPM;
       if(new_speed > speed_max_valueRPM)
        new_speed = speed_max_valueRPM;        
  
    if(MCI_GetSTMState(oMCI)== RUN)       
     {
       MCI_ExecSpeedRamp(oMCI, new_speed/6, 0); 
     }
     
       PWM_fail_counter_prev = PWM_fail_counter;
    }
    break;
   case SM_STOP:
    {
       /* This is a user command to stop the motor */
       MCI_StopMotor(oMCI);
        
       /* After the time "STOP_DURATION" the motor will be restarted */
       if (UserCnt >= STOP_DURATION)
          {
            /* Next state */ 
            User_State = SM_ARMING;
            UserCnt = 0;   
            Ton_value  = 0;
            ARMING_counter = 0;
            Ton_value_previous = 0;
            buffer_completed = FALSE;
          }
          else
          {
            UserCnt++;
          }
    }
    break;  
  }
  TB_SetUserTimebaseTime(USER_TIMEBASE_OCCURENCE_TICKS);
 }
}

void PWM_FC_control()
{
#ifdef PWM_ESC  
  if(MCI_GetSTMState(oMCI)== FAULT_OVER)
  {
   MCI_FaultAcknowledged(oMCI);
   User_State = SM_STOP;   
   ARMING_counter  = 0;
  }
 
  pwm_start();
#endif
}
